# microtonal_m4l_device

./: .gitignore  LICENSE  README.md
archive/: EJIM4L.maxpat  denote_microtonal_recv.amxd  polyTest.amxd
archive/js/: denote_microtonal_merged.js  denote_microtonal_multi_midi_channel.js
archive/single_accidental_approach/: denote_microtonal.c  maxmspsdk.xcconfig
c/: denote_microtonal.c  maxmspsdk.xcconfig
debug/: self_load_test.maxpat
denote_microtonal/: CMakeLists.txt  denote_microtonal.c  readme.md
m4l/: denote_microtonal.amxd  dictToLMMapper.js
max/: dictToLMMapper.js  noteNames  note_ratios  sendRemapper.js  test.maxpat  tst.json  tst.txt
tuning_file_gen/: base_empty.json  base_just.json  base_tempered.json  equiv_factor.js  reorder_array.js  tuning_file_gen.maxpat
tuning_files/: 13_limit.json  31_limit.json  31_limit_ext.json  3_and_5_limit.json  5_limit.json  7_11.json  7_11_ext.json  7x11_limit.json  absurd_31_limit.json  ext_natural_harmonic.json  natural_harmonic_series.json
